# chatroom

server/: CMakeLists.txt  README.md  main.cpp
server/controller/: ClientConnection.cpp  ClientConnection.h  Server.cpp  Server.h
server/model/: Message.cpp  Message.h  MessageManager.cpp  MessageManager.h  User.cpp  User.h  UserManager.cpp  UserManager.h
server/resources/: JsonInterface.txt
server/test/: ClientTest.cpp  JsonCppClientTest.cpp  JsonCppServerTest.cpp  JsonToolsTest.cpp
server/tools/: JsonTools.cpp  JsonTools.h
